crates/djls-extraction/tests/snapshots/corpus__django_core__django_contrib_admin_templatetags_admin_modify.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "django.contrib.admin.templatetags.admin_modify::cell_count":
    expects_arg: false
    arg_optional: false
block_specs: {}
