crates/djls-extraction/tests/snapshots/corpus__django_core__django_contrib_admin_templatetags_base.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities: {}
block_specs: {}
