crates/djls-extraction/tests/snapshots/corpus__django_core__django_contrib_flatpages_templatetags_flatpages.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "django.contrib.flatpages.templatetags.flatpages::get_flatpages":
    arg_constraints: []
    required_keywords:
      - position: -2
        value: as
      - position: -4
        value: for
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: false
filter_arities: {}
block_specs: {}
