crates/djls-extraction/tests/snapshots/corpus__django_core__django_contrib_humanize_templatetags_humanize.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "django.contrib.humanize.templatetags.humanize::apnumber":
    expects_arg: false
    arg_optional: false
  "django.contrib.humanize.templatetags.humanize::intcomma":
    expects_arg: true
    arg_optional: true
  "django.contrib.humanize.templatetags.humanize::intword":
    expects_arg: false
    arg_optional: false
  "django.contrib.humanize.templatetags.humanize::naturalday":
    expects_arg: true
    arg_optional: true
  "django.contrib.humanize.templatetags.humanize::naturaltime":
    expects_arg: false
    arg_optional: false
  "django.contrib.humanize.templatetags.humanize::ordinal":
    expects_arg: false
    arg_optional: false
block_specs: {}
